--- a/README
+++ b/README
@@ -5,4 +5,4 @@ MSSV: 3123411085
 Tên: Trương Nhật Long
 MSSV: 3123411182
 Mã số nhóm: 8386
-Đề Tài: Rau Sạch Việt Nam
+Đề Tài: Vựa Rau Sạch Việt Nam
